--- a/AzureFunction/ISISGetEmployee/ISISGetEmployee/ISISGetEmployee.csproj
+++ b/AzureFunction/ISISGetEmployee/ISISGetEmployee/ISISGetEmployee.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
